--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
     ignore = dirty
+[submodule "bundle/surround"]
+	path = bundle/surround
+	url = https://github.com/tpope/vim-surround.git
