Playing around with colorscheme

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,9 +9,24 @@
 [submodule "vim-pathogen"]
 	path = vim-pathogen
 	url = https://github.com/tpope/vim-pathogen
+    ignore = dirty
 [submodule "vim-repeat"]
 	path = vim-repeat
 	url = https://github.com/tpope/vim-repeat.git
+    ignore = dirty
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
 	url = https://github.com/scrooloose/nerdcommenter.git
+    ignore = dirty
+[submodule "bundle/phpunit/plugin"]
+	path = bundle/phpunit/plugin
+	url = https://github.com/klokane/vim-phpunit.git
+[submodule "bundle/solarized"]
+	path = bundle/solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "bundle/vim-pigraph"]
+	path = bundle/vim-pigraph
+	url = git://github.com/jhchabran/vim-pigraph.git
+[submodule "bundle/csapprox"]
+	path = bundle/csapprox
+	url = git://github.com/godlygeek/csapprox.git
